# rust-dynamodb

./: .gitignore  Cargo.toml  README.md  samconfig.toml  template.yml
src/: main.rs
src/dtos/: request.rs
src/errors/: error.rs
src/models/: product.rs
src/queries/: get_by_id.rs
